[gd_scene load_steps=11 format=3 uid="uid://di32sgpusahmi"]

[ext_resource type="Script" path="res://scenes/maps/BaseLevel2.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/mapObjects/Portal.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/maps/Map.tscn" id="3"]
[ext_resource type="Script" path="res://scenes/mapObjects/Portal.gd" id="6"]
[ext_resource type="PackedScene" path="res://scenes/mapObjects/Ladder.tscn" id="8"]
[ext_resource type="PackedScene" path="res://scenes/mapObjects/Teleporter.tscn" id="9"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(306, 51)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(758, 71)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(15, 56.75)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(19, 59)

[node name="Map" type="Node2D"]
script = ExtResource("1")

[node name="TileMap" parent="." instance=ExtResource("3")]
position = Vector2(235, -16)
format = 2

[node name="MapObjects" type="Node2D" parent="."]

[node name="Ladder" parent="MapObjects" instance=ExtResource("8")]
position = Vector2(298, -98)

[node name="noCol" type="Area2D" parent="MapObjects/Ladder"]
position = Vector2(-63, 82)
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/Ladder/noCol"]
position = Vector2(234, -325)
shape = SubResource("1")

[node name="teleport zone" type="Area2D" parent="MapObjects"]
position = Vector2(235, -16)
collision_layer = 2048
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/teleport zone"]
position = Vector2(319, 86)
shape = SubResource("2")

[node name="Teleporter2" parent="MapObjects" instance=ExtResource("9")]
position = Vector2(821, -54)
scale = Vector2(1.03714, 1.00204)
endLocation = Vector2(900, -260)

[node name="Teleporter1" parent="MapObjects" instance=ExtResource("9")]
position = Vector2(183, -51)
scale = Vector2(1.04935, 1.00166)
endLocation = Vector2(103, -250)

[node name="Portal1" parent="MapObjects" instance=ExtResource("2")]
position = Vector2(103, -250)
script = ExtResource("6")

[node name="Portal2" parent="MapObjects" instance=ExtResource("2")]
position = Vector2(904, -252)
script = ExtResource("6")

[node name="Wall1" type="StaticBody2D" parent="MapObjects"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/Wall1"]
modulate = Color(1, 0, 1, 1)
light_mask = 32
position = Vector2(148, -441.5)
shape = SubResource("3")

[node name="Wall2" type="StaticBody2D" parent="MapObjects"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/Wall2"]
modulate = Color(1, 0, 1, 1)
light_mask = 32
position = Vector2(791, -436.75)
shape = SubResource("3")

[node name="Wall3" type="StaticBody2D" parent="MapObjects"]
position = Vector2(791, -434)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/Wall3"]
modulate = Color(1, 0, 1, 1)
light_mask = 32
position = Vector2(-304, -9)
shape = SubResource("4")

[node name="Node2D" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="Node2D"]

[node name="Monsters" type="Node2D" parent="Node2D"]

[connection signal="body_entered" from="MapObjects/teleport zone" to="." method="_on_teleport_zone_body_entered"]
